# 2019

branch_ClientSDK/: CMakeCache.txt  CMakeLists.txt  Makefile  allmake.sh  cmake_install.cmake  x86_CMakeLists.txt
branch_ClientSDK/Sample/: CMakeLists.txt  sample.cpp
branch_ClientSDK/TestSuitDriver/: CMakeLists.txt  Makefile  TestDriverFactory.cpp  TestDriverFactory.h  cmake_install.cmake  sample.cpp
branch_ClientSDK/TestSuitDriver/TestDriver/: Driver.cpp  Driver.h  Driver02_10_01.cpp  Driver02_10_01.h  Driver02_10_05.cpp  Driver02_10_05.h  Driver02_10_115.cpp  Driver02_10_115.h  Driver02_10_136.cpp  Driver02_10_136.h  Driver02_10_156.cpp  Driver02_10_156.h  Driver02_10_16.cpp  Driver02_10_16.h  Driver02_10_160.cpp  Driver02_10_160.h  Driver02_10_17.cpp  Driver02_10_17.h  Driver02_10_170.cpp  Driver02_10_170.h  Driver02_10_18.cpp  Driver02_10_18.h  Driver02_10_180.cpp  Driver02_10_180.h  Driver02_10_32.cpp  Driver02_10_32.h  Driver02_10_33.cpp  Driver02_10_33.h  Driver02_10_37.cpp  Driver02_10_37.h  Driver02_10_39.cpp  Driver02_10_39.h  Driver02_10_59.cpp  Driver02_10_59.h  Driver02_10_62.cpp  Driver02_10_62.h  Driver02_10_79.cpp  Driver02_10_79.h  DriverTestCommunicate.cpp  DriverTestCommunicate.h  (+322 more)
branch_ClientSDK/TestSuitStub/: CaseCommonInfo.cpp  CaseCommonInfo.h
branch_ClientSDK/TestSuitStub/CommunicateAgent/: StubProtocol.cpp  StubProtocol.h  StubUartProtocol.cpp  StubUartProtocol.h
branch_ClientSDK/lrzsz/: config.cache  runShell.sh
branch_ClientSDK/src/: CMakeLists.txt  Makefile  cmake_install.cmake
branch_ClientSDK/src/CommunicateAgent/: Communication.cpp  Communication.h  CommunicationAgent.cpp  CommunicationAgent.h  MessageQueue.cpp  MessageQueue.h  Protocol.cpp  Protocol.h  UDPProtocol.cpp  UDPProtocol.h  UartProtocol.cpp  UartProtocol.h
branch_ClientSDK/src/DataCache/: DataCache.cpp  DataCache.h  FaceDataManage.cpp  FaceDataManage.h  FrameManage.cpp  FrameManage.h  ImgName.cpp  ImgName.h  RequestManage.cpp  RequestManage.h
branch_ClientSDK/src/DetectFaceIF/: ConfigManage.cpp  ConfigManage.h  DetectFaceIF.cpp  ProcessReq.cpp  ProcessReq.h
branch_ClientSDK/src/FaceDetector/: BaseCaptureStratege.cpp  BaseCaptureStratege.h  DetectCfgInfo.cpp  DetectCfgInfo.h  DrawRect.cpp  DrawRect.h  EncodeModule.cpp  EncodeModule.h  FaceDetector.cpp  FaceDetector.h  HeartBeatInfo.cpp  HeartBeatInfo.h  LeftAreaCaptureStratege.cpp  LeftAreaCaptureStratege.h  RealTimeCaptureStratege.cpp  RealTimeCaptureStratege.h  RegionJudger.cpp  RegionJudger.h  SpaceCaptureStratege.cpp  SpaceCaptureStratege.h  mysem.cpp  mysem.h
branch_ClientSDK/src/FaceDetector/CountFace/: CountInterface.cpp  CountInterface.h  CountPeople.cpp  CountPeople.h
branch_ClientSDK/src/FaceDetector/HaiSi/HaisiEcode/: HaisiEcode.cpp  HaisiEcode.h  sample_comm_isp.c  sample_comm_sys.c  sample_comm_venc.c
branch_ClientSDK/src/FaceDetector/HaiSi/include/: acodec.h  hi_ae_comm.h  hi_comm_aio.h  hi_comm_isp.h  hi_comm_vi.h  hi_comm_video.h  hi_debug.h  mpi_ai.h  mpi_vi.h  sample_comm.h
branch_ClientSDK/src/FaceDetector/Zmode/: ZmodeUpgrade.cpp  ZmodeUpgrade.h  cfg.h  uart.cpp  uart.h  util.h
branch_ClientSDK/src/Include/: DetectFaceIF.h  DetectFaceIFCommon.h
branch_ClientSDK/src/MemoryManage/: MemoryManager.cpp  MemoryManager.h  MemoryNode.cpp  MemoryNode.h
branch_ClientSDK/src/MsgProcessor/: MsgProcessor.cpp  MsgProcessor.h
branch_ClientSDK/src/MsgProcessor/SDKMsgProcessor/: SDKCommand.cpp  SDKCommand.h
branch_ClientSDK/src/MsgProcessor/UartMsgProcessor/: ActiveAppCfgUCmd.cpp  ActiveAppCfgUCmd.h  ActiveAppPkgUCmd.cpp  ActiveAppPkgUCmd.h  ActiveCamreaQPSIImageUCmd.cpp  ActiveCamreaQPSIImageUCmd.h  GetFaceDetecteVersionUCmd.cpp  GetFaceDetecteVersionUCmd.h  HeartBeatUCmd.cpp  HeartBeatUCmd.h  NotifyFaceInfoUCmd.cpp  NotifyFaceInfoUCmd.h  QueryInfoUCmd.cpp  QueryInfoUCmd.h  SoftUpgradeAppCfgCmd.cpp  SoftUpgradeAppCfgCmd.h  SoftUpgradeAppPkgCmd.cpp  SoftUpgradeAppPkgCmd.h  SoftUpgradeUCmd.cpp  SoftUpgradeUCmd.h  StartFaceCheckUCmd.cpp  StartFaceCheckUCmd.h  StopFaceCheckUCmd.cpp  StopFaceCheckUCmd.h  UartCommand.cpp  UartCommand.h  UartCommandCtrl.cpp  UartCommandCtrl.h  UartCommandType.h  UartMessageFilter.cpp  UartMessageFilter.h
branch_ClientSDK/src/PthreadManage/: EncodeImgPthd.cpp  EncodeImgPthd.h  MsgReqProcPthd.cpp  MsgReqProcPthd.h  PthreadManage.cpp  PthreadManage.h  SystemPthd.cpp  SystemPthd.h
branch_ClientSDK/src/RequestProcessor/: BaseReq.cpp  BaseReq.h  GetFaceDetecteVersionReq.cpp  GetFaceDetecteVersionReq.h  GetServiceVisionReq.cpp  GetServiceVisionReq.h  ProcUartMsgReq.cpp  ProcUartMsgReq.h  RequestProcessor.cpp  RequestProcessor.h  Requestion.cpp  Requestion.h  SendHeartBeatReq.cpp  SendHeartBeatReq.h  SetBaudrateReq.cpp  SetBaudrateReq.h  SoftUpgradeReq.cpp  SoftUpgradeReq.h  SwitchDetectorReq.cpp  SwitchDetectorReq.h  SwitchRequestion.cpp  SwitchRequestion.h  UpgradeRequestion.cpp  UpgradeRequestion.h  UserCommonRequestion.cpp  UserCommonRequestion.h  setBaudrateRequestion.cpp  setBaudrateRequestion.h
branch_ClientSDK/src/Utility/: BaseThread.cpp  BaseThread.h  LittleEndianIO.cpp  LittleEndianIO.h  MD5.cpp  MD5.h  NonCopyable.h  RecoLock.cpp  RecoLock.h  TimeStatis.cpp  TimeStatis.h  Version.h  file_util.cpp  file_util.h  log.cpp  log.h
branch_ClientSDK/src/Utility/Observer/: ObjectOfObserver.cpp  ObjectOfObserver.h  Observer.cpp  Observer.h
